# Algebra-Driven-Design

./: Algebra-Driven-Design.cabal  README.md
code/: talk_regex.hs
code/QuickSpec/: Extra.hs
code/Scavenge/: App.hs  CPS.hs  ClueState.hs  Initial.hs  InputFilter.hs  Results.hs  Spec.hs  Test.hs  spec.inc
code/Tiles/: Efficient.hs  Initial.hs
code/workflow/: bugfree_algebra.hs  cps_algebra.hs  group_algebra.hs  initial_algebra.hs  rewards_algebra.hs
